--- a/templates/result.html
+++ b/templates/result.html
@@ -1,14 +1,34 @@
-<title>Otsikko</title>
-<h1>Oikeat vastaukset</h1>
-Mikä on eglanniksi auto?</br>
-Vastasit {{ car }}</br>
-Oikea vastaus on car</br>
-</br>
-Mikä on englanniksi koira?</br>
-Vastasit {{ dog }}</br>
-oikea vastaus on dog</br>
-</br>
-Mikä on englanniksi kissa?</br>
-vastasit {{ cat }}</br>
-Oikea vastaus on cat </br>
-<a href="/">Kirjaudu ulos tästä</a>
+<!DOCTYPE html>
+<html>
+<head>
+
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  
+  <title>Tatun sananharjoittelu</title>
+  
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+</head>
+  <body>
+	<h1>Sanaharjoittelu</h1>
+
+	Mikä on eglanniksi auto?</br>
+	Vastasit {{ car }}</br>
+	Oikea vastaus on car</br>
+	</br>
+	Mikä on englanniksi koira?</br>
+	Vastasit {{ dog }}</br>
+	oikea vastaus on dog</br>
+	</br>
+	Mikä on englanniksi kissa?</br>
+	vastasit {{ cat }}</br>
+	Oikea vastaus on cat </br>
+	</br>
+	<a href= "estimate">Anna palautetta</a></br></br>
+	<a href= "/">Palaa</a></br></br>
+	<a href="/logout">Kirjaudu ulos tästä</a>
+	
+	
+</body>
+</html>
