--- a/templates/all_estimates.html
+++ b/templates/all_estimates.html
@@ -13,17 +13,16 @@
   <body>
 	<h1>Sanaharjoittelu</h1>
 	
-	<form action="/add_new_user" method="POST">
-	  <p>Uuden käyttäjän käyttäjänimi</p>
-	  <input type="text" name="username"></p>
-	  <p>Salasana:</p>
-	  <input type="password" name="password"></p>
-	  <p>Opettaja:</p>
-	  <input type="checkbox" name="teacher"></p>
-	  <input type="submit" value="Tee uusi käyttäjä"></br>
-	  </br>
-	  <a href= "/">Palaa</a></br>
-	</form>
+	<h3>Kaikki arvostelut</h3>
+	
+	<hr>
+{% for comment in estimate %}
+	{{ comment[0] }}
+	<hr>
+{% endfor %}
 
+	<a href= "/">Palaa</a></br></br>
+	<a href="/logout">Kirjaudu ulos tästä</a>
+	
 </body>
 </html>
