--- a/templates/error.html
+++ b/templates/error.html
@@ -13,17 +13,9 @@
   <body>
 	<h1>Sanaharjoittelu</h1>
 	
-	<form action="/add_new_user" method="POST">
-	  <p>Uuden käyttäjän käyttäjänimi</p>
-	  <input type="text" name="username"></p>
-	  <p>Salasana:</p>
-	  <input type="password" name="password"></p>
-	  <p>Opettaja:</p>
-	  <input type="checkbox" name="teacher"></p>
-	  <input type="submit" value="Tee uusi käyttäjä"></br>
-	  </br>
-	  <a href= "/">Palaa</a></br>
-	</form>
-
+	<p>Jokin meni vikaan</p>
+	<a href="/">Palaa</a>	
+	
+	
 </body>
 </html>
