--- a/templates/new_deck.html
+++ b/templates/new_deck.html
@@ -12,18 +12,18 @@
 </head>
   <body>
 	<h1>Sanaharjoittelu</h1>
-	
-	<form action="/add_new_user" method="POST">
-	  <p>Uuden käyttäjän käyttäjänimi</p>
-	  <input type="text" name="username"></p>
-	  <p>Salasana:</p>
-	  <input type="password" name="password"></p>
-	  <p>Opettaja:</p>
-	  <input type="checkbox" name="teacher"></p>
-	  <input type="submit" value="Tee uusi käyttäjä"></br>
-	  </br>
-	  <a href= "/">Palaa</a></br>
+
+	<form action="/add_new_deck" method="POST">
+	  <p> Lisää nimi pakalle </p>
+	  <input type="text" name="name"></p>
+	  <p> Kerro kuinka vaikea tämä pakka on asteikolla 1-5 </p>
+	  <input type="text" name="difficulty"></p>
+	  <input type="submit" value="Lisää pakka tietokantaan"></br></br>
+	  <a href= "/">Palaa</a></br></br>
+	  <a href="/logout">Kirjaudu ulos tästä</a>
 	</form>
+
+
 
 </body>
 </html>
