--- a/templates/new_deck.html
+++ b/templates/new_deck.html
@@ -20,7 +20,7 @@
 	  <input type="text" name="difficulty"></p>
 	  <input type="submit" value="Lisää pakka tietokantaan"></br></br>
 	  <a href= "/">Palaa</a></br></br>
-	  <a href="/logout">Kirjaudu ulos tästä</a>
+	  <a href="/logout">Kirjaudu ulos</a>
 	</form>
 
 
