--- a/templates/new_estimate.html
+++ b/templates/new_estimate.html
@@ -18,7 +18,7 @@
 	  <input type="text" name="estimate"></p>
 	  <input type="submit" value="Lähetä palaute"></br></br>
 	  <a href= "/">Palaa</a></br></br>
-	  <a href="/logout">Kirjaudu ulos tästä</a>
+	  <a href="/logout">Kirjaudu ulos</a>
 	</form>
 	
 </body>
