--- a/templates/result.html
+++ b/templates/result.html
@@ -27,7 +27,7 @@
 	</br>
 	<a href= "estimate">Anna palautetta</a></br></br>
 	<a href= "/">Palaa</a></br></br>
-	<a href="/logout">Kirjaudu ulos tästä</a>
+	<a href="/logout">Kirjaudu ulos</a>
 	
 	
 </body>
