--- a/templates/all_estimates.html
+++ b/templates/all_estimates.html
@@ -22,7 +22,7 @@
 {% endfor %}
 
 	<a href= "/">Palaa</a></br></br>
-	<a href="/logout">Kirjaudu ulos tästä</a>
+	<a href="/logout">Kirjaudu ulos</a>
 	
 </body>
 </html>
