--- a/templates/select_deck.html
+++ b/templates/select_deck.html
@@ -24,7 +24,7 @@
 	  </select>
 	  <input type="submit" value= "mene testiin valitulla pakalla"></br></br>
 	  <a href= "/">Palaa</a></br></br>
-	  <a href="/logout">Kirjaudu ulos tästä</a>
+	  <a href="/logout">Kirjaudu ulos</a>
 	</form>
 
 
