--- a/templates/test.html
+++ b/templates/test.html
@@ -32,7 +32,7 @@
 	</form>
 	  </br>
 	  <a href= "/">Palaa</a></br></br>
-	  <a href="/logout">Kirjaudu ulos tästä</a>
+	  <a href="/logout">Kirjaudu ulos</a>
 
 
 </body>
