--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  
-  <title>Tatun sananharjoittelu</title>
-  
-  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
-</head>
+{% include 'html_header.html' %}
   <body>
+	
 	<h1>Sanaharjoittelu</h1>
+	
+{% if session.username %}
+
+	Olet kirjautunut sisään. Kirjaudu ensin ulos!</br></br>
+	<a href= "/logout">Kirjaudu ulos</a>
+	
+{% else %}
 	
 	<form action="/add_new_user" method="POST">
 	  <p>Uuden käyttäjän käyttäjänimi</p>
@@ -19,11 +18,12 @@
 	  <p>Salasana:</p>
 	  <input type="password" name="password"></p>
 	  <p>Opettaja:</p>
-	  <input type="checkbox" name="teacher"></p>
+	  <input type="checkbox" name="teacher" style="width:25px; height:25px"></p>
 	  <input type="submit" value="Tee uusi käyttäjä"></br>
 	  </br>
 	  <a href= "/">Palaa</a></br>
 	</form>
+{% endif %}
 
 </body>
 </html>
