--- a/templates/new_word.html
+++ b/templates/new_word.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  
-  <title>Tatun sananharjoittelu</title>
-  
-  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
-</head>
+{% include 'html_header.html' %}
   <body>
+  	
+{% include 'html_loginbox.html' %}
+	
 	<h1>Sanaharjoittelu</h1>
 	
+{% if session.teacher == 1 %}
+	
 	<form action="/add_new_word" method="POST">
+	  
+	  Valitse pakka</br></br>
+	  <label for="deck"></label>
+	  <select id="deck" name="deck_id">
+{% for deck in name %}
+		<option value="{{ deck[0] }}">{{ deck[1] }}</option>
+{% endfor %}
+	  </select>
 	  <p>Suomi</p>
 	  <input type="text" name="word"></p>
 	  <p>Englanti</p>
 	  <input type="text" name="translation"></p>
 	  <input type="submit" value="Lisää kirjoitettu sana tietokantaan"></br></br>
-	  <a href= "/">Palaa</a></br></br>
-	  <a href="/logout">Kirjaudu ulos</a>
+{% else %}
+	  Älä yritä huijata!!!! </br></br>
+{% endif %}
 	</form>
 
 
