--- a/templates/test.html
+++ b/templates/test.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  
-  <title>Tatun sananharjoittelu</title>
-  
-  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
-</head>
+{% include 'html_header.html' %}
   <body>
+  	
+{% include 'html_loginbox.html' %}
+	
 	<h1>Sanaharjoittelu</h1>
 
-	<form action="/result" method="POST">
+	<form action="/result" method= "POST">
 	  <title>Testi</title>
 	  <h1>Tervetuloa testiin</h1>
 	  <hr>
-	  <select id="deck" name="deck_id">
-{% for word in deck %}
-	  <option value="{{ word[0] }}">{{ word[1] }}</option>
+	  <input type="hidden" name="deck_id" value="{{ deck_id }}">
+	  <table>
+  	    <tr>
+    	      <th>Suomi</th>
+    	      <th>Englanti</th>
+    	    </tr>
+    	  
+{% for words in word %}
+		  <tr>
+	  	    <td>{{ words[1] }}</td>
+	  	    <td><input type="text" name="translation_{{ words[0] }}"></td>
+	  	  </tr>
+	  	
 {% endfor %}
-	  </select>
-	  <a> Mikä on englanniksi auto? </a></br>
-	  <input type="text" name="car"></p></br>
-	  <a> Mikä on englanniksi koira? </a></br>
-	  <input type="text" name="dog"></p></br>
-	  <a> Mikä on englanniksi kissa? </a></br>
-	  <input type="text" name="cat"></p></br>
-	  <input type="submit" value="Lähetä"></br>
-	</form>
+	  </table>	  
 	  </br>
-	  <a href= "/">Palaa</a></br></br>
-	  <a href="/logout">Kirjaudu ulos</a>
+	  <input type="submit" value= "Lähetä vastaukset"></br></br>
+	</form>
+	  </br></br>
 
 
 </body>
