--- a/templates/new_word.html
+++ b/templates/new_word.html
@@ -18,9 +18,9 @@
 		<option value="{{ deck[0] }}">{{ deck[1] }}</option>
 {% endfor %}
 	  </select>
-	  <p>Suomi</p>
+	  <p>Sana</p>
 	  <input type="text" name="word"></p>
-	  <p>Englanti</p>
+	  <p>Käännös</p>
 	  <input type="text" name="translation"></p>
 	  <input type="submit" value="Lisää kirjoitettu sana tietokantaan"></br></br>
 {% else %}
