--- a/templates/delete_deck.html
+++ b/templates/delete_deck.html
@@ -18,7 +18,7 @@
 	  <label for="deck"></label>
 	  <select id="deck" name="deck_id">
 {% for deck in decks %}
-		<option value="{{ deck[0] }}">{{ deck[0] }}, {{ deck[1] }}, {{ deck[2] }}</option>
+		<option value="{{ deck[0] }}">{{ deck[1] }}, {{ deck[2] }}</option>
 {% endfor %}
 	  </select>
 	  <input type="submit" value= "Poista pakka"></br></br>
