--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,22 @@
 	
 	<h1>Sanaharjoittelu</h1>
 	
-	<a href="/select_deck">Mene testiin</a><br>
-	</br>
+	{% if word_count > 0 %}
+	<a href="/select_deck">Mene testiin</a><br></br>
+	{% else %}
+	Yhtään harjoitusta ei ole olemassa. </br>
+	Opettajana voit lisätä uusia harjoituksia!
+	</br></br>
+	{% endif %}
 	{% if session.teacher == 1 %}
-		<a href="/new_word">Lisää sanoja testiin</a></br>
-		</br>
 		<a href="/new_deck">Lisää pakka</a></br>
 		</br>
-		<a href="/delete_deck">Poista pakka</a></br>
-		</br>
+		{% if deck_count > 0 %}
+			<a href="/new_word">Lisää sanoja testiin</a></br>
+			</br>
+			<a href="/delete_deck">Poista pakka</a></br>
+			</br>
+		{% endif %}
 		<a href="/select_one_student">Katso oppilaan tulokset</a></br>
 		</br>
 	{% endif %}
