--- a/templates/test.html
+++ b/templates/test.html
@@ -14,8 +14,8 @@
 	  <input type="hidden" name="deck_id" value="{{ deck_id }}">
 	  <table>
   	    <tr>
-    	      <th>Suomi</th>
-    	      <th>Englanti</th>
+    	      <th>Sana</th>
+    	      <th>Käännös</th>
     	    </tr>
     	  
 {% for words in word %}
