--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -44,6 +44,14 @@ input {
   font-size: 25px;
 }
 
+input[type=submit] {
+  padding: 2px; 
+  background:SandyBrown; 
+  cursor:pointer;
+  border-radius: 5px; 
+  margin: 10px;
+}
+
 /* unvisited link */
 a:link {
   color: SteelBlue;
@@ -88,6 +96,7 @@ td {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  vertical-align: top;
 }
 
 th {
