--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,7 +1,6 @@
 html {
   height: 100%;
   background-color: moccasin;
-  
   background-repeat: repeat;
   /*padding: 50px 50px 50px 100px;*/
   font-size: 20px;
@@ -89,7 +88,9 @@ a:active {
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 50%;
+  table-layout:fixed;
+  width: 90%;
+  word-wrap: break-word;
 }
 
 td {
@@ -97,6 +98,7 @@ td {
   text-align: left;
   padding: 8px;
   vertical-align: top;
+  word-wrap: break-word;
 }
 
 th {
@@ -104,6 +106,8 @@ th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  vertical-align: top;
+  word-wrap: break-word;
 }
 
 .login_box {
