--- a/templates/new_estimate.html
+++ b/templates/new_estimate.html
@@ -20,7 +20,7 @@
 	  </select>
 	  </br>
 	  <p>Anna palaute</p>
-	  <textarea name="estimate" rows="5" cols="50"></textarea></br></br>
+	  <textarea name="estimate" rows="5" cols="50" maxlength="1000"></textarea></br></br>
 	  <input type="submit" value="Lähetä palaute"></br></br>
 	</form>
 	
