--- a/templates/new_word.html
+++ b/templates/new_word.html
@@ -19,9 +19,9 @@
 {% endfor %}
 	  </select>
 	  <p>Sana</p>
-	  <input type="text" name="word"></p>
+	  <input type="text" name="word" maxlength="35"></p>
 	  <p>Käännös</p>
-	  <input type="text" name="translation"></p>
+	  <input type="text" name="translation" maxlength="35"></p>
 	  <input type="submit" value="Lisää kirjoitettu sana tietokantaan"></br></br>
 {% else %}
 	  Älä yritä huijata!!!! </br></br>
