--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,9 @@
 	<h1>Sanaharjoittelu</h1>
 	<form action="/login" method="POST">
 	<p>Käyttäjänimi:<br>
-	<input type="text" name="username"></p>
+	<input type="text" name="username" maxlength="20"></p>
 	<p>Salasana:<br>
-	<input type="password" name="password"></p></br>
+	<input type="password" name="password" maxlength="20"></p></br>
 	<input type="submit" value="Kirjaudu sisään">
 	</form>
 	</br>
