--- a/templates/new_deck.html
+++ b/templates/new_deck.html
@@ -11,7 +11,7 @@
 
 	<form action="/add_new_deck" method="POST">
 	  <p> Lisää nimi pakalle </p>
-	  <input type="text" name="name"></p>
+	  <input type="text" name="name" maxlength="35"></p>
 	  <p> Kerro kuinka vaikea tämä pakka on asteikolla 1-5 </p>
 	  <label for="difficulty"></label>
 	  <select id="difficulty" name="difficulty">
@@ -22,7 +22,7 @@
 		<option value="5">5</option>
 	  </select>
 	  </br></br>
-	  <input type="submit" value="Lisää pakka tietokantaan"></br></br>
+	  <input type="submit" value="Lisää pakka"></br></br>
 {% else %}
 	Älä yritä huijata!!!! </br></br>
 {% endif %}
