--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -14,9 +14,9 @@
 	
 	<form action="/add_new_user" method="POST">
 	  <p>Uuden käyttäjän käyttäjänimi</p>
-	  <input type="text" name="username"></p>
+	  <input type="text" name="username" maxlength="20"></p>
 	  <p>Salasana:</p>
-	  <input type="password" name="password"></p>
+	  <input type="password" name="password" maxlength="20"></p>
 	  <p>Opettaja:</p>
 	  <input type="checkbox" name="teacher" style="width:25px; height:25px"></p>
 	  <input type="submit" value="Tee uusi käyttäjä"></br>
