--- a/templates/error.html
+++ b/templates/error.html
@@ -7,11 +7,11 @@
 	
 	<h1>Sanaharjoittelu</h1>
 	
-	<p>Jokin meni vikaan</p>
+	<div class="error_message">Jokin meni vikaan</p>
 	
-	<p>Virhe: {{error}}</p>
+	<p>Virhe: {{error}}</p></br>
 	
-	<a href="/">Palaa</a>	
+	<a href="/">Palaa alkuun</a>	
 	
 	
 </body>
