--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
 		{% if deck_count > 0 %}
 			<a href="/new_word">Lisää sanoja testiin</a></br>
 			</br>
+			<a href="/select_deck_word_remove">Poista sanoja pakasta</a></br>
+			</br>
 			<a href="/delete_deck">Poista pakka</a></br>
 			</br>
 		{% endif %}
