--- a/templates/html_header.html
+++ b/templates/html_header.html
@@ -7,4 +7,5 @@
   <title>Sanaharjoittelu</title>
   
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+  <script src="{{url_for('static', filename='scripts/javascript.js')}}"></script>
 </head>
