--- a/templates/select_one_student.html
+++ b/templates/select_one_student.html
@@ -23,6 +23,7 @@
 {% else %}
 	  Älä yritä huijata!!!!</br></br>
 {% endif %}
+	  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 	</form>
 
 
