--- a/templates/test.html
+++ b/templates/test.html
@@ -28,6 +28,7 @@
 	  </table>	  
 	  </br>
 	  <input type="submit" value= "Lähetä vastaukset"></br></br>
+	  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 	</form>
 	  </br></br>
 
