--- a/templates/delete_selected_word.html
+++ b/templates/delete_selected_word.html
@@ -14,6 +14,7 @@
 	Sana, käännös
 	
 	<form action="/delete_selected_word" method="POST">
+	  <input type="hidden" name="deck_id" value="{{ deck_id }}">
 	  </br>
 	  <label for="word"></label>
 	  <select id="word" name="word_id">
@@ -25,6 +26,7 @@
 {% else %}
 	  Älä yritä huijata!!!!</br></br>
 {% endif %}
+	  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 	</form>
 	
 </body>
